[package]
name = "cloud-native-dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.74", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_23"] }
istio-api-rs = { version = "0.3.0", features = ["v1_17_0"] }
nom = "7.1.3"
